Fixed landscape layout and maze spacing.

--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,9 @@
 @import "../fonts/PressStart2P/stylesheet.css";
 
+/*
+ * 92vmin is the height of the maze.
+ */
+
 body {
 	background: black;
 	color: white;
@@ -18,14 +22,49 @@ body {
 	right: 0;
 	top: 0;
 	padding: 1em;
+	width: calc(92vmin * 9 / 7);
+	top: 0.8vmin;
+	left: 50%;
+	margin-left: calc(-92vmin * 9 / 14);
+	line-height: 1;
+	height: 4vmin;
+	font-size: 4vmin;
+	overflow: hidden;
+}
+
+#score-wrap {
+	position: absolute;
+	left: 0;
+	top: 0;
+}
+
+#high-score-wrap {
+	position: absolute;
+	right: 0;
+	top: 0;
+}
+
+.kc-life {
+	display: inline-block;
+	width: 4vmin;
+	height: 4vmin;
+	background-size: 4vmin 4vmin;
+	background-image: url('../images/kc-still.gif');
+	background-repeat: no-repeat;
+	image-rendering: -moz-crisp-edges;
+	image-rendering: pixelated;
+	
 }
 
 table {
-	xborder-collapse: collapse;
-	width: calc(96vmin * 9 / 7);
-	height: 96vmin;
+	width: calc(92vmin * 9 / 7);
+	height: 92vmin;
 	transform: translateZ(0);
 	transform-origin: 0 0;
+	position: absolute;
+	bottom: 0.8vmin;
+	left: 50%;
+	margin-left: calc(-92vmin * 9 / 14)
 }
 
 th {
@@ -34,8 +73,8 @@ th {
 }
 td {
 	border: 0.5vmin solid blue;
-	width: 10.6666vmin; /* 96vmin / 9); */
-	height: calc(96vmin / 7);
+	width: 10.6666vmin; /* 92vmin / 9); */
+	height: calc(92vmin / 7);
 	text-align: center;
 	vertical-align: middle;
 	white-space: nowrap;
@@ -99,8 +138,8 @@ td.s.w::after {
  */
 
 td > * {
-	width: calc(96vmin / 9 );
-	height: calc(96vmin / 9 );
+	width: calc(92vmin / 9 );
+	height: calc(92vmin / 9 );
 	position: absolute;
 	top: 1vmin;
 	left: 1vmin;
@@ -125,8 +164,8 @@ td > *:before {
 	z-index: 2;
 	width: 100%;
 	height: 100%;
-	background-size: calc(96vmin / 9 ) auto;
-	background-position-y: calc(96vmin / 9 * 4 / 16);
+	background-size: calc(92vmin / 9 ) auto;
+	background-position-y: calc(92vmin / 9 * 4 / 16);
 	background-repeat: no-repeat;
 }
 
@@ -139,7 +178,7 @@ td > *:after {
 	z-index: 1;
 	width: 100%;
 	height: 100%;
-	background-size: calc(96vmin / 9 ) calc(96vmin / 9 );
+	background-size: calc(92vmin / 9 ) calc(92vmin / 9 );
 	background-repeat: no-repeat;
 }
 
@@ -193,7 +232,7 @@ td > .dot {
 
 .muncher:after {
 	background-image: url('../images/muncher-left.gif');
-	background-size: auto calc(96vmin / 9 );
+	background-size: auto calc(92vmin / 9 );
 	animation: muncher-move 250ms steps(2) infinite;
 }
 
@@ -237,7 +276,7 @@ td > .dot {
 .muncher.n:before {
 	background-image: url('../images/eyes-down.gif');
 	transform: scaleY(-1);
-	background-position-y: calc(96vmin / 9 * 8 / 16);
+	background-position-y: calc(92vmin / 9 * 8 / 16);
 }
 
 .muncher.s:before {
@@ -251,14 +290,14 @@ td > .dot {
 
 .kc.move:after {
 	background-image: url('../images/kc-left.gif');
-	background-size: auto calc(96vmin / 9 );
+	background-size: auto calc(92vmin / 9 );
 	animation: kc-move 250ms steps(4) infinite;
 }
 
 
 .kc.die:after {
 	background-image: url('../images/kc-dying.gif');
-	background-size: auto calc(96vmin / 9 );
+	background-size: auto calc(92vmin / 9 );
 	animation: kc-die 1000ms steps(8);
 }
 
@@ -298,15 +337,19 @@ td > .dot {
 
 
 @keyframes kc-die {
-	100% { background-position: calc(-96vmin / 9 * 8) }
+	100% { background-position: calc(-92vmin / 9 * 8) }
 }
 
+/*
+ * Why on earth does Chrome Win need -89.7vmin instead of -92vmin? Because if it
+ * doesn't, it will show an animation flaw
+ */
 @keyframes kc-move {
-	100% { background-position: calc(-96vmin / 9 * 4) }
+	100% { background-position: calc(-92vmin / 9 * 4) }
 }
 
 @keyframes muncher-move {
-	100% { background-position: calc(-96vmin / 9 * 2) }
+	100% { background-position: calc(-92vmin / 9 * 2) }
 }
 
 @keyframes muncher-flash {
